social share images

--- a/index.html
+++ b/index.html
@@ -3,12 +3,20 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="./eye.JPG" sizes="16x16" type="image/png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Macondo&family=Shizuru&family=Libre+Baskerville&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Aunt Vicki</title>
+  <link rel="icon" type="image/png" href="/photos/avLogoFavicon.png">
+    <meta property="og:title" content="Aunt Vicki">
+    <meta property="og:description" content="Rock And Roll Baby!">
+    <meta property="og:image" content="https://www.auntvicki.rocks/photos/kyAv.jpg">
+    <meta property="og:url" content="https://www.auntvicki.rocks">
+    
+    <meta name="twitter:title" content="Aunt Vicki">
+    <meta name="twitter:description" content="Rock And Roll Baby!">
+    <meta name="twitter:image" content="https://www.auntvicki.rocks/photos/kyAv.jpg">
 </head>
 
 <body>
