adding google tag manager

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     <meta name="twitter:description" content="Rock And Roll Baby!">
     <meta name="twitter:image" content="https://www.auntvicki.rocks/photos/kyAv.jpg">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JRWKRLRLJL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JRWKRLRLJL');
+</script>
 
 <body>
   <div id="root"></div>
