--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <meta name="twitter:image" content="https://www.auntvicki.rocks/photos/kyAv.jpg">
 </head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JRWKRLRLJL"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G3B2BGKJFW"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-JRWKRLRLJL');
+  gtag('config', 'G-G3B2BGKJFW');
 </script>
 
 <body>
